<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.SettingsFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.5"
        android:contentDescription="@string/iv_content_description_settings"
        android:scaleType="centerCrop"
        android:src="@drawable/settings_background" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/dark_theme_switch_label"
            android:textSize="16sp"
            app:thumbTint="@drawable/thump"
            app:trackTint="@drawable/track"></com.google.android.material.switchmaterial.SwitchMaterial>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/save_special_storage_switch_label"
            android:textSize="16sp"
            app:thumbTint="@drawable/thump"
            app:trackTint="@drawable/track" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/save_dropbox_switch_label"
            android:textSize="16sp"
            app:thumbTint="@drawable/thump"
            app:trackTint="@drawable/track" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>