<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.home.HomeFragment">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/iv_content_description_home"
            android:src="@drawable/main_background"
            android:scaleType="centerCrop"
            android:alpha="0.7">
        </ImageView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_title_home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_home_text"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="26sp" />

            <TextView
                android:id="@+id/tv_home_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:text="@string/tv_home_content_text"
                android:textSize="18sp"
                android:padding="16dp"/>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>